--- a/static/style.css
+++ b/static/style.css
@@ -123,3 +123,104 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1rem;
 }
+
+
+
+
+/*My options*/
+.form_Acc{
+  display: flex;
+  flex-direction: column;
+
+    display: block;
+    line-height: 10px;
+
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex: column;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    margin: 0px 10px 0px 10px;
+
+
+
+}
+/* Account */
+.btnAcc{
+  /* text-decoration: underline; */
+  color: black;
+
+  /* border-radius: 0px; */
+  /* width: 130px;*/
+  height: 40px;
+  padding: 10px;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  /* outline: 0px solid  #d9d9d9; */
+  font:inherit;
+  font-weight: 400;
+  /* color: #787878; */
+    margin-right: 20px;
+
+
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 30px;
+    position: relative;
+    text-decoration: none;
+
+    transition: color .1s liner;
+
+}
+.btnAcc::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  margin-top: 5px;
+  /* transition: opacity .1s liner; */
+
+  }
+.invisible{
+display: none;
+}
+.container_btn{
+margin: auto;
+display: flex;
+justify-content: center;
+/*width:50%;*/
+
+}
+.btnAcc{
+display: block;
+
+}
+.button{
+  width: 130px;
+  height: 40px;
+  margin-top: 5px;
+  background-color: inherit;
+  border-radius: 0px;
+  border: none;
+  cursor: pointer;
+  outline: 1px solid  #d9d9d9;
+  color: #000;
+  font-family:"Montserrat", monospace;
+  font-weight: 400;
+  background-color: #f2f2f2;
+}
+.button:hover{
+  outline:1px solid #999999;
+}
+.cheese{
+margin-top: 100px;
+}
+
+.containerForAcc{
+margin-top : 100px;
+}
